--- a/web/templates/user/index.html.eex
+++ b/web/templates/user/index.html.eex
@@ -13,7 +13,7 @@
 <%= for user <- @users do %>
     <tr>
       <td><%= user.email %></td>
-      <td><%= user.avatar %></td>
+      <td><%= user.avatar["filepath"] %></td>
 
       <td class="text-right">
         <%= link "Show", to: user_path(@conn, :show, user), class: "btn btn-default btn-xs" %>
